ghc-4335c07/testsuite/tests/partial-sigs/should_fail/PartialClassMethodSignature.hs
{-# LANGUAGE PartialTypeSignatures #-}
module PartialClassMethodSignature where


class Foo a where
  foo :: a -> _
