ghc-4335c07/testsuite/tests/partial-sigs/should_fail/PartialClassMethodSignature.stderr

PartialClassMethodSignature.hs:6:15: error:
    Wildcard ‘_’ not allowed
      in a class method signature for ‘foo’
